package edu.fiuba.algo3.modelo;

public class Nada extends TrabajoZangano{

    @Override
    public void extraer(RazaRecursos razaRecursos) {
    }
}
